--- a/product_flexible_code/i18n/zh_CN.po
+++ b/product_flexible_code/i18n/zh_CN.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 8.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-07-04 18:41+0800\n"
-"PO-Revision-Date: 2016-07-04 18:46+0800\n"
+"POT-Creation-Date: 2016-07-05 19:45+0800\n"
+"PO-Revision-Date: 2016-07-05 19:47+0800\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,17 +21,17 @@ msgstr ""
 #: model:ir.actions.act_window,help:product_flexible_code.action_stock_category_views_act_window
 msgid ""
 "<p class=\"oe_view_nocontent_create\">\n"
-"            Click to add new stock category views\n"
+"            Click to add new stock category\n"
 "        </p><p>\n"
-"            Something about model\n"
+"        \n"
 "        </p>\n"
 "    "
 msgstr ""
 
 #. module: product_flexible_code
-#: field:stock.category,account_category:0
-msgid "Accounting Category"
-msgstr "类别"
+#: model:ir.model,name:product_flexible_code.model_mrp_bom
+msgid "Bill of Material"
+msgstr "物料清单"
 
 #. module: product_flexible_code
 #: field:stock.category,complete_name:0
@@ -65,11 +65,6 @@ msgid "Description"
 msgstr "说明"
 
 #. module: product_flexible_code
-#: field:stock.category,digits:0
-msgid "Digits"
-msgstr "位数"
-
-#. module: product_flexible_code
 #: field:stock.category,display_name:0
 msgid "Display Name"
 msgstr "显示名称"
@@ -97,12 +92,12 @@ msgstr "最后修改时间"
 #. module: product_flexible_code
 #: field:stock.category,write_uid:0
 msgid "Last Updated by"
-msgstr "最后更新人"
+msgstr "最后更新者"
 
 #. module: product_flexible_code
 #: field:stock.category,write_date:0
 msgid "Last Updated on"
-msgstr "最后更新于"
+msgstr "最后更新日期"
 
 #. module: product_flexible_code
 #: field:stock.category,parent_left:0
@@ -122,12 +117,18 @@ msgstr "新货号"
 #. module: product_flexible_code
 #: field:product.product,optional_product_ids:0
 msgid "Optional Products"
-msgstr "选项产品"
+msgstr "可选产品"
 
 #. module: product_flexible_code
 #: field:stock.category,parent_id:0
 msgid "Parent Category"
 msgstr "父类别"
+
+#. module: product_flexible_code
+#: field:product.product,parent_product:0
+#: field:product.template,parent_product:0
+msgid "Parent Product"
+msgstr "关联产品"
 
 #. module: product_flexible_code
 #: model:ir.model,name:product_flexible_code.model_product_product
@@ -137,16 +138,14 @@ msgstr "产品"
 #. module: product_flexible_code
 #: field:product.product,product_description_sample:0
 #: field:product.template,product_description_sample:0
-#: field:stock.category,product_description_sample:0
 msgid "Product Description Sample"
-msgstr "产品说明示例"
+msgstr "此分类产品描述实例"
 
 #. module: product_flexible_code
 #: field:product.product,product_description_template:0
 #: field:product.template,product_description_template:0
-#: field:stock.category,product_description_template:0
 msgid "Product Description Template"
-msgstr "产品说明模板"
+msgstr "此分类产品描述规则"
 
 #. module: product_flexible_code
 #: model:ir.model,name:product_flexible_code.model_product_template
@@ -156,9 +155,8 @@ msgstr "产品模板"
 #. module: product_flexible_code
 #: field:product.product,production_efficiency:0
 #: field:product.template,production_efficiency:0
-#: field:stock.category,production_efficiency:0
 msgid "Production Efficiency"
-msgstr "生产效率"
+msgstr "此分类产品默认生产效率"
 
 #. module: product_flexible_code
 #: help:product.product,optional_product_ids:0
@@ -181,6 +179,12 @@ msgid "Sequence"
 msgstr "序列"
 
 #. module: product_flexible_code
+#: field:product.product,similar_products:0
+#: field:product.template,similar_products:0
+msgid "Similar Products"
+msgstr "那些分类是为了将相似的产品进行分组以进行电子商务的销售."
+
+#. module: product_flexible_code
 #: model:ir.ui.menu,name:product_flexible_code.menu_stock_category_views
 #: field:product.product,stock_category:0
 #: view:product.template:product_flexible_code.product_template_search_view
@@ -195,8 +199,8 @@ msgstr ""
 
 #. module: product_flexible_code
 #: model:ir.actions.act_window,name:product_flexible_code.action_stock_category_views_act_window
-msgid "stock category views"
-msgstr "库存类别视图"
+msgid "stock category"
+msgstr "库存类别"
 
 #. module: product_flexible_code
 #: view:stock.category:product_flexible_code.view_stock_category_form
@@ -216,4 +220,29 @@ msgstr "stock_category_tree"
 #. module: product_flexible_code
 #: model:ir.model,name:product_flexible_code.model_stock_category
 msgid "the product category for flexible code generation"
+msgstr ""
+
+#. module: product_flexible_code
+#: field:stock.category,product_description_sample:0
+msgid "此分类产品描述实例"
+msgstr ""
+
+#. module: product_flexible_code
+#: field:stock.category,product_description_template:0
+msgid "此分类产品描述规则"
+msgstr ""
+
+#. module: product_flexible_code
+#: field:stock.category,digits:0
+msgid "此分类产品流水码位数"
+msgstr ""
+
+#. module: product_flexible_code
+#: field:stock.category,account_category:0
+msgid "此分类产品默认会计类别"
+msgstr ""
+
+#. module: product_flexible_code
+#: field:stock.category,production_efficiency:0
+msgid "此分类产品默认生产效率"
 msgstr ""
